2003-09-28  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: remove .asset.in copy in install-data-local
	* boards/click_on_letter.xml.in: added assetml dataset
	* boards/geography.xml.in: added assetml dataset
	* boards/money.xml.in: removed empty credits
	* boards/money_cents.xml.in: removed empty credits
	* boards/skins/default/button_style2.png: added here for maintenance
	* boards/skins/default/repeat.png: changed to a mouth
	* boards/sounds/de/colors/gcompris_colors_de.assetml.in: updated description field
	* boards/sounds/en/colors/gcompris_colors_en.assetml.in: updated description field
	* boards/sounds/fr/colors/gcompris_colors_fr.assetml.in: fixed yellow
	* gcompris.spec.in: fixed python requirement
	* src/boards/colors.c: (start_board): now the repeat icon is not display if sound is 
	available
	* src/boards/menu.c: (menu_create_item): manage assetml dataset in mandatory_sound_*
	* src/gcompris/bonus.c: (gcompris_display_bonus): fixed "good job" sounds to use assetml
	* src/gcompris/gameutil.c: (gcompris_add_xml_to_data): added mandatory_sound_dataset
	* src/gcompris/gcompris-board.h: added mandatory_sound_dataset
	* src/gcompris/oggplayer.c: (erase_credits), (item_event_ogginfo): check rootitem before 
	destroy in case

2003-09-26  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: Release 4.0RC2
	* src/gcompris/soundutil.c: fixed a printf

2003-09-26  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/click_on_letter.xml.in: changed reference to mandatory_sound_file but stil buggy
	* boards/flags/ca.png: now catalan instead of canadian
	* boards/flags/cs.png: Former Tchechoslovakia
	* boards/flags/gcompris_flags.assetml.in: fixed 
	* boards/flags/sr.png: added
	* boards/money.xml.in: added help 
	* boards/money_cents.xml.in: added help 
	* boards/skins/default/display_area_small.png: added to display the music artist
	* boards/skins/pink/display_area_small.png: added to display the music artist